--- a/Weitianshi/pages/message/browseMe/browseMe.wxml
+++ b/Weitianshi/pages/message/browseMe/browseMe.wxml
@@ -22,19 +22,49 @@
             <view class="t-outsideBox" data-id="{{item.user_id}}" catchtap="userDetail">
               <view class="t-applyMyProject t-contacts-detailm">
                 <view class="t-introduceBox flex">
-                  <view class="t-userName">{{item.user_real_name}}</view>
-                  <view class="t-userPosition">{{item.user_company_career}}</view>
-                  <view class="t-userPart flex" wx:if="{{item.user_groups[0].group_title}}">
-                    <image src="/img/icon-renzheng@2x.png" class="t-renzheng"></image>
-                    <view class="t-userPart1">{{item.user_groups[0].group_title}}</view>
-                  </view>
-                  <view class="t-user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
                   <image src="{{item.user_avatar_url}}" class="t-userPic" wx:if="{{item.user_avatar_url}}"></image>
+                  <view class="t-userName">{{item.user_real_name}}</view>
+                  <view class="t-userPart flex" wx:if="{{item.user_groups[0].group_title}}">
+                    <!-- <image src="/img/icon-renzheng@2x.png" class="t-renzheng"></image>
+          <view class="t-userPart1">{{item.authentication[0].group_title}}</view> -->
+                    <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='投资方'}}" src="/img/img-touziren@2x.png"></image>
+                    <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='买方FA'}}" src="/img/img-maifang1@2x.png"></image>
+                  </view>
+                  <view class="t-record">{{item.active_status}}</view>
+                  <view class="t-user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
+
                 </view>
-                <view class="t-userCompany">{{item.user_company_name}}</view>
-                <view class="t-record">{{item.active_status}}</view>
-                <view class="t-roundGroupPush flex" wx:if="{{item.user_invest_industry !=''}}">
-                  <view class="t-roundGroupTitle">投资领域：</view>
+                <view class="t-careerCompany flex">
+                  <view class="t-userPosition">{{item.user_company_career}}</view>
+                  <view class="t-userCompany1" wx:if="{{item.user_company_name}}">·{{item.user_company_name}}</view>
+                </view>
+                <view class='t-people flex' wx:if='{{item.user_id!=user_id}}'>
+                  <view class='t-cardBottomItem t-add flex' wx:if='{{item.follow_status==0}}' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='contactsAdd'>
+                    <!-- <image class='t-itemPic' src='/img/icon-jiarenmai@2x.png'></image> -->
+                    <view class="t-addFri flex">
+                      <image class="t-addFriend" src="/img/icon-jia@2x.png"></image>
+                      <view>好友</view>
+                    </view>
+                  </view>
+                  <view class='t-cardBottomItem t-add   flex' hover-class='t-hoverColor' hover-stop-propagation='true' wx:if='{{item.follow_status==1}}' data-telephone="{{item.user_mobile}}" catchtap="telephone">
+                    <!-- <image class='t-itemPic' src='/img/icon-huweirenmai@2x.png'></image> -->
+                    <view>打电话</view>
+                  </view>
+                  <view class='t-cardBottomItem t-wait flex' wx:if='{{item.follow_status==2}}'>
+                    <!-- <image class='t-itemPic' src='/img/icon-daiyanzheng@3x.png'></image> -->
+                    <view style='color:#999;'>待验证</view>
+                  </view>
+                  <view class='t-cardBottomItem t-add flex' hover-class='t-hoverColor' hover-stop-propagation='true' wx:if='{{item.follow_status==3}}' data-id='{{item.user_id}}' catchtap='contactsAddDirect'>
+                    <!-- <image class='t-itemPic' src='/img/icon-jiarenmai@2x.png'></image> -->
+                    <view class="t-addFri flex">
+                      <image class="t-addFriend" src="/img/icon-jia@2x.png"></image>
+                      <view>好友</view>
+                    </view>
+                  </view>
+                </view>
+                <view class='t-people flex' wx:if='{{item.user_id==user_id}}'></view>
+                <view class="t-roundGroupPush flex" wx:if="{{item.user_invest_industry.length != 0}}">
+                  <image class="t-roundGroupTitle" src="/img/icon-lunci@2x.png"></image>
                   <view class="t-roundGroupContent">
                     <block wx:for="{{item.user_invest_industry}}" wx:key="{{industryItem.industry_id}}" wx:for-item='industryItem'>
                       <label wx:if="{{index < item.user_invest_industry.length-1}}">
@@ -47,7 +77,7 @@
                   </view>
                 </view>
                 <view class="t-roundGroupPush flex" wx:if="{{item.user_invest_stage.length != 0}}">
-                  <view class="t-roundGroupTitle">投资轮次：</view>
+                  <image class="t-roundGroupTitle" src="/img/icon-lingyu1@2x.png"></image>
                   <view class="t-roundGroupContent">
                     <block wx:for="{{item.user_invest_stage}}" wx:key="{{stageItem.stage_id}}" wx:for-item='stageItem'>
                       <label wx:if="{{index < item.user_invest_stage.length-1}}">{{stageItem.stage_name}}、</label>
@@ -57,122 +87,34 @@
                 </view>
               </view>
             </view>
+
             <view class="aline"></view>
+
             <view class='t-cardBottom flex' wx:if='{{item.user_id!=user_id}}'>
-              <view class='t-cardBottomItem flex' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' bindtap='projectPush'>
-                <image class='t-itemPic' src='/img/icon-tuisongxiangmu@2x.png'></image>
+              <view class="t-history">看过
+                <label class="t-historyNum">990</label>
+                个项目</view>
+              <view class="t-line"></view>
+              <view class='t-cardBottomItem1 flex' hover-class='t-hoverColor' hover-stop-propagation='true' data-id='{{item.user_id}}' catchtap='projectPush'>
+                <image class='t-itemPic' src='/img/icon-tijiao@2x.png'></image>
                 <span>推送项目</span>
               </view>
-              <!-- <view class='t-cardBottomItem flex'>
-      <image class='t-itemPic' src='/img/icon-tuisongxiangmu@2x.png'></image>
-      <span>已推送</span>
-    </view> -->
-              <view class="t-line"></view>
-              <view class='t-cardBottomItem flex' wx:if='{{item.follow_status==0}}' data-id='{{item.user_id}}' bindtap='contactsAdd'>
-                <image class='t-itemPic' src='/img/icon-jiarenmai@2x.png'></image>
-                <view>加人脉</view>
-              </view>
-              <view class='t-cardBottomItem flex' wx:if='{{item.follow_status==1}}'>
-                <image class='t-itemPic' src='/img/icon-huweirenmai@2x.png'></image>
-                <view style='color:#999;'>已为人脉</view>
-              </view>
-              <view class='t-cardBottomItem flex' wx:if='{{item.follow_status==2}}'>
-                <image class='t-itemPic' src='/img/icon-daiyanzheng@3x.png'></image>
-                <view style='color:#999;'>待验证</view>
-              </view>
-              <view class='t-cardBottomItem flex' wx:if='{{item.follow_status==3}}' data-id='{{item.user_id}}' bindtap='contactsAddDirect'>
-                <image class='t-itemPic' src='/img/icon-jiarenmai@2x.png'></image>
-                <view>加人脉</view>
-              </view>
+
             </view>
             <view class='t-cardBottom flex' wx:if='{{item.user_id==user_id}}'></view>
           </view>
         </view>
       </block>
-
-
-      <!-- <block wx:for="{{contacts}}" wx:key="{{item.user_id}}"> -->
-      <!-- <view class="card contacts-detailm" data-id="{{item.user_id}}" bindtap="userDetail">
-          <view class="user_info flex">
-            <view class="redPoint" wx:if="{{item.message_status==0}}"></view>
-            <view class="user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
-            <image class="user_pic" src="{{item.user_avatar_url}}" wx:if="{{item.user_avatar_url}}"></image>
-            <view class="user_info_right">
-              <view class="flex frame">
-                <view class="name_flex flex">
-                  <view class="user_name">{{item.user_real_name}}</view>
-                  <view class="user_career">{{item.user_company_career}}</view>
-                </view>
-                <!--加人脉窗口-->
-      <!-- <label>  -->
-      <!--需要进行判断 0:不是当前用户人脉1.当前用户的人脉2.待验证3.同意加为人脉-->
-      <!-- <view class="addPerson" wx:if="{{item.follow_status == 0||item.follow_status == 3}}">
-                    <view class="addPersonBtn add-contactsm" data-followedId="{{item.user_id}}" data-index="{{index}}" catchtap="addNetWork" data-follow_status="{{item.follow_status}}">加人脉</view>
-                  </view>
-                  <view class="netWork" wx:if="{{item.follow_status == 2}}">
-                    <label class="addNet">待验证</label>
-                  </view>
-                  <view class="netWork" wx:if="{{item.follow_status == 1}}">
-                    <label class="addNet">已为人脉</label>
-                  </view>
-                </label>
-              </view>
-              <view class="user_company" wx:if="{{item.user_company_name !=''}}">{{item.user_company_name}}</view>
-            </view>
-          </view>
-          <view class="investor_info"> -->
-
-      <!--投资领域-->
-      <!-- <view class="investor_industry_frame flex" wx:if="{{item.user_invest_industry !=''}}">
-              <view class="investor_text">投资领域:</view>
-              <view class="investor_right flex">
-                <block wx:for="{{item.user_invest_industry}}" wx:for-item="industry" wx:key="{{industry.industry_id}}">
-                  <view class="industry" hidden="{{index>3}}">{{industry.industry_name}}</view>
-                </block>
-              </view>
-            </view> -->
-
-      <!--投资轮次-->
-      <!-- <view class="investor_industry_frame flex" wx:if="{{item.user_invest_stage !=''}}">
-              <view class="investor_text">投资轮次:</view>
-              <view class="investor_right flex">
-                <block wx:for="{{item.user_invest_stage}}" wx:for-item="stage" wx:key="{{stage.stage_id}}">
-                  <view class="stage">{{stage.stage_name}}</view>
-                </block>
-              </view>
-            </view> -->
-
-      <!--拥有资源-->
-      <!-- <view class="investor_industry_frame flex" wx:if="{{item.user_resource_find !=''}}">
-              <view class="investor_text">寻求资源:</view>
-              <view class="investor_right flex">
-                <block wx:for="{{item.user_resource_find}}" wx:for-item="res_find" wx:key="{{res_find.resource_id}}">
-                  <view class="res_find">{{res_find.resource_name}}</view>
-                </block>
-              </view>
-            </view> -->
-
-      <!--寻求资源-->
-      <!-- <view class="investor_industry_frame flex" wx:if="{{item.user_resource_give !=''}}">
-              <view class="investor_text">拥有资源:</view>
-              <view class="investor_right flex">
-                <block wx:for="{{item.user_resource_give}}" wx:for-item="res_give" wx:key="{{res_give.resource_id}}">
-                  <view class="res_give">{{res_give.resource_name}}</view>
-                </block>
-              </view>
-            </view>
-          </view> -->
-      <!-- <view class="addTime" style="background:#f8f8f8;">{{item.created_at}}</view>
-        </view> -->
-      <!-- </block> -->
+      <template is="theBottom" wx:if="{{investorList!==''}}"></template>
     </view>
   </scroll-view>
 </view>
 
 <!--没有更多-->
-<view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
+<!-- <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view> -->
 
 <!--没有数据-->
-<view class="nullState" wx:if="{{contacts=='' || !contacts}}">
+<!-- <view class="nullState" wx:if="{{contacts=='' || !contacts}}">
   <view class="nothing">没有数据</view>
-</view>
+</view> -->
+<template is="isEmpty" data="{{emptyNumber:contacts}}" ></template>
