--- a/Weitianshi/utils/wxml/projectDetail.wxml
+++ b/Weitianshi/utils/wxml/projectDetail.wxml
@@ -5,24 +5,30 @@
 <!--页面主体  -->
 <view id="myDetail">
   <view class="weui-panel__bd">
-    <!--名片-->
-    <view class="classname">
+    <!--加锁状态下的名片-->
+    <view class="classname" wx:if="{{show_detail != 1}}">
       <view class="projectDetailTop">
         <view class="projectDetailBox">
-          <view class="flex">
-            <view class="describle">{{project.pro_intro}}</view>
-            <image src="/img/img-dujiaqianyue1@2x.png" class="projectDetailType" wx:if="{{project.is_exclusive == 1}}"></image>
-            <image src="/img/img-feidujiaqianyue@2x.png" class="projectDetailType" wx:if="{{project.is_exclusive == 2}}"></image>
-          </view>
-          <block wx:for="{{pro_industry}}" wx:key="{{index}}" wx:if="{{pro_industry != ''}}">
-            <label class="industry" wx:if="{{index < pro_industry.length-1}}">{{item.industry_name}}、</label>
-            <label class="industry" wx:if="{{index == pro_industry.length-1}}">{{item.industry_name}}</label>
-          </block>
-          <view class="allProjectDetail flex" wx:if="{{project.pro_area != ''||pro_finance_stock_after!=0||project.pro_stage!=''||project.pro_scale!=''}}">
-            <view class="projectDetailLine" wx:if="{{project.pro_scale!=''}}">{{project.pro_scale.scale_money}}</view>
-            <view class="projectDetailLine" wx:if="{{pro_finance_stock_after!=0}}">{{project.pro_finance_stock_after}}%</view>
-            <view class="projectDetailLine" wx:if="{{project.pro_stage!=''}}">{{project.pro_stage.stage_name}}</view>
-            <view class="projectDetailLine" wx:if="{{project.pro_area != ''}}">{{project.pro_area.area_title}}</view>
+          <view>
+            <view class="flex">
+              <view class="describle">
+                {{project.pro_intro}}
+              </view>
+              <image src="/img/img-dujia@2x.png" class="projectDetailType" wx:if="{{project.is_exclusive == 1}}"></image>
+              <!-- <image src="/img/img-feidujiaqianyue@2x.png" class="projectDetailType" wx:if="{{project.is_exclusive == 2}}"></image> -->
+            </view>
+            <view class="flex allIndustry" wx:if="{{industy_sort.length != 0}}">
+              <!-- <view class="industry">{{industy_sort}}</view> -->
+              <block wx:for="{{pro_industry}}" wx:key="{{index}}">
+                <label class="industry">{{item.industry_name}}</label>
+              </block>
+            </view>
+            <view class="allProjectDetail flex" wx:if="{{project.pro_area != ''||project.pro_stage!=''||project.pro_scale!=''}}">
+              <view class="projectDetailLine" wx:if="{{project.pro_scale.scale_money}}">{{project.pro_scale.scale_money}}</view>
+              <!-- <view class="projectDetailLine" wx:if="{{project.pro_finance_stock_after!= 0}}">{{project.pro_finance_stock_after}}%</view> -->
+              <view class="projectDetailLine" wx:if="{{project.pro_stage.stage_name}}">· {{project.pro_stage.stage_name}}</view>
+              <view class="projectDetailLine" wx:if="{{project.pro_area.area_title}}">· {{project.pro_area.area_title}}</view>
+            </view>
           </view>
         </view>
         <view class="aline"></view>
@@ -37,7 +43,7 @@
               <view class="userCareer">{{user.user_career}}</view>
               <view class="userCompany">{{user.user_company}}</view>
               <view class="contactPersonBox flex">
-                <view class="contactPerson">联系Ta</view>
+                <!-- <view class="contactPerson">联系Ta</view> -->
                 <image src="/img/icon-jiantou.png" class="userIcon"></image>
               </view>
             </view>
@@ -47,26 +53,37 @@
     </view>
     <!--项目亮点-->
     <view class="brightBox" style="background: white;" wx:if="{{button_type != 1}}">
-      <!--wx:if="{{pro_goodness[0].goodness_title}}"  -->
-      <!-- <view class="brightPoint">
-        <view class="brightPointBox flex">
-          <image src="/img/img-star.png" class="titlePic"></image>
-          <view class="title star">{{pro_goodness[0].goodness_title}}</view>
-        </view>
-        <view class="brightContent" class="{{isChecked0?'brightContent':'brightContentAfter'}}" value="{{number}}" wx:if="{{project.pro_goodness}}">{{pro_goodness[0].goodness_desc}}</view>
-        <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked0 == true&& textBeyond5}}" data-check="{{0}}">全部</label>
-        <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked0== false&& textBeyond5}}" data-check="{{0}}" >收起</label>
-      </view> -->
       <!--项目亮点-->
       <view class="brightPoint " wx:if="{{project.pro_goodness.length!=0}}">
         <view class="brightPointBox flex">
-          <image src="/img/img-star.png" class="titlePic"></image>
-          <view class="title star">投资亮点</view>
+          <!-- <image src="/img/img-star.png" class="titlePic"></image> -->
+          <view class="title ">投资亮点</view>
         </view>
-        <view class="{{isChecked0?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}">
+        <!-- <view class="{{isChecked0?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}"> -->
+        <view class="brightUnfoldAfter" value="{{number}}">
           <block wx:for="{{project.pro_goodness}}" wx:for-item="goodness" wx:key="{{index}}">
             <view class="goodTitle1">
-              <view class="goodTitle">【{{goodness.goodness_title}}】</view>
+              <view class="goodTitle">· {{goodness.goodness_title}}：</view>
+              <view class="brightContent">
+                {{goodness.goodness_desc}}
+              </view>
+            </view>
+          </block>
+        </view>
+        <!-- <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked0 == true && textBeyond0==true}}" data-check="{{0}}">全部</label>
+              <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked0== false && textBeyond0==true}}" data-check="{{0}}">收起</label> -->
+      </view>
+      <!--市场概况pro_market_genera  -->
+      <view class="brightPoint " wx:if="{{project.pro_market_genera.length!=0}}">
+        <view class="brightPointBox flex">
+          <!-- <image src="/img/icon-shichanggaikuang@2x.png" class="titlePic"></image> -->
+          <view class="title ">市场概况</view>
+        </view>
+        <!-- <view class="{{isChecked1?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}"> -->
+        <view class="brightUnfoldAfter" value="{{number}}">
+          <block wx:for="{{project.pro_market_genera}}" wx:for-item="goodness" wx:key="{{index}}">
+            <view class="goodTitle1">
+              <view class="goodTitle">· {{goodness.goodness_title}}：</view>
               <view class="brightContent">
                 {{goodness.goodness_desc}}
               </view>
@@ -74,81 +91,69 @@
           </block>
 
         </view>
-        <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked0 == true && textBeyond0==true}}" data-check="{{0}}">全部</label>
-        <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked0== false && textBeyond0==true}}" data-check="{{0}}">收起</label>
+        <!-- <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked1 == true && textBeyond1==true}}" data-check="{{1}}">收起</label>
+              <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked1== false && textBeyond1==true}}" data-check="{{1}}">全部</label> -->
       </view>
-      <!--市场概况pro_market_genera  -->
-      <view wx:if="{{show_detail}}">
-        <view class="brightPoint " wx:if="{{project.pro_market_genera.length!=0}}">
-          <view class="brightPointBox flex">
-            <image src="/img/icon-shichanggaikuang@2x.png" class="titlePic"></image>
-            <view class="title star">市场概况</view>
-          </view>
-          <view class="{{isChecked1?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}">
-            <block wx:for="{{project.pro_market_genera}}" wx:for-item="goodness" wx:key="{{index}}">
-              <view class="goodTitle1">
-                <view class="goodTitle">【{{goodness.goodness_title}}】</view>
-                <view class="brightContent">
-                  {{goodness.goodness_desc}}
-                </view>
-              </view>
-            </block>
-
-          </view>
-          <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked1 == true && textBeyond1==true}}" data-check="{{1}}">全部</label>
-          <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked1== false && textBeyond1==true}}" data-check="{{1}}">收起</label>
+      <!--产品概况pro_service -->
+      <view class="brightPoint " wx:if="{{project.pro_service.length!=0}}">
+        <view class="brightPointBox flex">
+          <!-- <image src="/img/icon-chanpingaikuang@2x.png" class="titlePic"></image> -->
+          <view class="title ">产品概况</view>
         </view>
-        <!--产品概况pro_service -->
-        <view class="brightPoint " wx:if="{{project.pro_service.length!=0}}">
-          <view class="brightPointBox flex">
-            <image src="/img/icon-chanpingaikuang@2x.png" class="titlePic"></image>
-            <view class="title star">产品概况</view>
-          </view>
-          <view class="{{isChecked2?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}">
-            <block wx:for="{{project.pro_service}}" wx:for-item="goodness" wx:key="{{index}}">
-              <view class="goodTitle1">
-                <view class="goodTitle">【{{goodness.goodness_title}}】</view>
-                <view class="brightContent">
-                  {{goodness.goodness_desc}}
-                </view>
+        <!-- <view class="{{isChecked2?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}"> -->
+        <view class="brightUnfoldAfter" value="{{number}}">
+          <block wx:for="{{project.pro_service}}" wx:for-item="goodness" wx:key="{{index}}">
+            <view class="goodTitle1">
+              <view class="goodTitle">· {{goodness.goodness_title}}：</view>
+              <view class="brightContent">
+                {{goodness.goodness_desc}}
               </view>
-            </block>
+            </view>
+          </block>
 
-          </view>
-          <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked2 == true && textBeyond2==true}}" data-check="{{2}}">全部</label>
-          <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked2== false && textBeyond2==true}}" data-check="{{2}}">收起</label>
         </view>
-        <!--商业模式 pro_business_model -->
-        <view class="brightPoint " wx:if="{{project.pro_business_model.length!=0}}">
-          <view class="brightPointBox flex">
-            <image src="/img/icon-shangyemoshi@2x.png" class="titlePic"></image>
-            <view class="title star">商业模式</view>
-          </view>
-          <view class="{{isChecked3?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}">
-            <block wx:for="{{project.pro_business_model}}" wx:for-item="goodness" wx:key="{{index}}">
-              <view class="goodTitle1">
-                <view class="goodTitle">【{{goodness.goodness_title}}】</view>
-                <view class="brightContent">
-                  {{goodness.goodness_desc}}
-                </view>
+        <!-- <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked2 == true && textBeyond2==true}}" data-check="{{2}}">收起</label>
+              <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked2== false && textBeyond2==true}}" data-check="{{2}}">全部</label> -->
+      </view>
+      <!--商业模式 pro_business_model -->
+      <view class="brightPoint " wx:if="{{project.pro_business_model.length!=0}}">
+        <view class="brightPointBox flex">
+          <!-- <image src="/img/icon-shangyemoshi@2x.png" class="titlePic"></image> -->
+          <view class="title">商业模式</view>
+        </view>
+        <!-- <view class="{{isChecked3?'brightUnfold':'brightUnfoldAfter'}}" value="{{number}}"> -->
+        <view class="brightUnfoldAfter" value="{{number}}">
+          <block wx:for="{{project.pro_business_model}}" wx:for-item="goodness" wx:key="{{index}}">
+            <view class="goodTitle1">
+              <view class="goodTitle">· {{goodness.goodness_title}}：</view>
+              <view class="brightContent">
+                {{goodness.goodness_desc}}
               </view>
-            </block>
+            </view>
+          </block>
 
-          </view>
-          <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked3 == true && textBeyond3==true}}" data-check="{{3}}">全部</label>
-          <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked3== false && textBeyond3==true}}" data-check="{{3}}">收起</label>
         </view>
+        <!-- <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked3 == true && textBeyond3 == true}}" data-check="{{3}}">收起</label>
+              <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked3 == false && textBeyond3 == true}}" data-check="{{3}}">全部</label> -->
       </view>
     </view>
     <!--三个tab页  -->
     <include src='/utils/wxml/threeTab.wxml' />
     <view class="projectScore" wx:if="{{score==true&&show_detail != 1}}" bindtap="projectRemark">项目评价</view>
     <!--申请查看未能过-->
-    <view class="lockStyle" wx:if="{{show_detail != 1}}">
-      <image class="lock" src="/img/img-suo2@2x.png"></image>
-      <image src="{{projectBack}}" class="lockBackground"> </image>
+    <view class="lockStyle"  wx:if="{{show_detail != 1}}">
+    <image src="/img/img-suozhu@2x.png" class="lockImg"></image>
+      <view class="lockText">认证投资人和认证买方FA可以查看项目的完整信息</view>
+      <text class="lockText1">基本介绍\t\t \t\t\t\t\t\t\t\t\t\t·\t\t 更多产品 · 融资信息 · 核心团队 · 里程碑</text>
+      <view class="lockRenzheng" bindtap="applyProject" wx:if="{{button_type == 3}}" data-project="{{id}}">立即认证</view>
+      <!--申请中  -->
+       <view class="lockRenzheng1" wx:if="{{button_type == 0}}"></view>
+       <!-- 重新申请 -->
+         <view class="lockRenzheng1" bindtap="applyProject" wx:if="{{button_type == 2}}" data-project="{{id}}" hover-class='t-other-button-hover'>立即认证</view>
+      <!-- <image class="lock" src="/img/img-suo2@2x.png"></image>
+      <image src="{{projectBack}}" class="lockBackground"> </image> -->
     </view>
-
+    <view class="lockKong"></view>
   </view>
 </view>
 
