--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -10,7 +10,7 @@
 <!--项目展示列表  -->
 <!-- <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:938rpx"  bindchange="bindChange"> -->
 <!--精选  -->
-<!-- <swiper-item data-current='0'> -->
+<!-- <swiper-item data-current='0'> --> 
 <!--项目展示  -->
 <!-- <scroll-view style="height:100%;" scroll-y="true" bindscrolltolower='loadMore'> -->
 <!--banner轮播  -->
@@ -55,13 +55,13 @@
   </swiper-item>
 </swiper>  -->
 <!--创建项目引导  -->
-<template is='createProject'></template>
+<!-- <template is='createProject'></template> -->
 <!--错误提示  -->
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 <!--人脉王浮标  -->
 <!-- <view class="competitor" bindtap="competitor">人脉王大赛</view> -->
 <!--电脑上传扫一扫  -->
-<view class="modalBox" hidden="{{modalBox==0}}">
+<!-- <view class="modalBox" hidden="{{modalBox==0}}">
   <view class="classname" bindtap="closeModal">
     <image src="/img/icon-guanbi@2x.png" class="close"></image>
   </view>
@@ -71,9 +71,14 @@
     <view class="modalTips">www.weitianshi.cn/qr</view>
     <view class="btn" hover-class='t-other-button-hover' bindtap="createProjectPc">扫一扫</view>
   </view>
-</view>
+</view> -->
 
-<view class="searchBox"></view>
+<view class="searchBox">
+  <view class="seachSth flex">
+    <icon type="search" size="14" class="search_icon1"></icon>
+    <label> 搜个关键词试试</label>
+  </view>
+</view>
 <!--banner轮播  -->
 <swiper class='banner' autoplay='true' current='{{bannerIndex}}' interval='4000' duration='500' circular='true' indicator-dots='true' indicator-active-color='#ffffff' indicator-color='rgba(255,255, 255, .3)'>
   <block wx:for="{{imgUrls}}" wx:key='item'>
@@ -84,17 +89,17 @@
 </swiper>
 
 <view class='jumpBox flex'>
-  <template is="jumpBlock" data="{{text:'投资机构',tapName:'',src:'/img/icon-touzijigou@2x.png'}}"></template>
-  <template is="jumpBlock" data="{{text:'投资人',tapName:'',src:'/img/icon-touziren@2x.png'}}"></template>
-  <template is="jumpBlock" data="{{text:'FA融资顾问',tapName:'',src:'/img/icon-FA@2x.png'}}"></template>
-  <template is="jumpBlock" data="{{text:'潜在投资方',tapName:'',src:'/img/icon-qianzai@2x.png'}}"></template>
+  <template is="jumpBlock" data="{{text:'投资机构',tapName:'jumpOrg',src:'/img/icon-touzijigou@2x.png'}}"></template>
+  <template is="jumpBlock" data="{{text:'投资人',tapName:'jumpInvestor',src:'/img/icon-touziren@2x.png'}}"></template>
+  <template is="jumpBlock" data="{{text:'FA融资顾问',tapName:'jumpFinancingAdvisor',src:'/img/icon-FA@2x.png'}}"></template>
+  <template is="jumpBlock" data="{{text:'潜在投资方',tapName:'potentialInvestor',src:'/img/icon-qianzai@2x.png'}}"></template>
 </view>
 
 <view class="selectProject">微天使FA精选项目</view>
 
 
 <block wx:for="{{slectProject}}" wx:key="{{index}}">
-  <view class="selectProjectBox" data-id="{{item.project_id}}" hover-class='t-hoverColor' bindtap="detail">
+  <view class="selectProjectBox" data-project="{{item.project_id}}" hover-class='t-hoverColor'  catchtap="projectDetail">
     <view class="describle" wx:if="{{item.pro_intro != ''}}">{{item.pro_intro}}</view>
     <image src="/img/img-dujia@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
     <view class='flex industryBox'>
