--- a/Weitianshi/pages/my/myNew/myNew.wxss
+++ b/Weitianshi/pages/my/myNew/myNew.wxss
@@ -83,17 +83,18 @@ page {
   height: 152rpx;
   border-radius: 50%;
 }
-.user_right{
+
+.user_right {
   margin-top: 24rpx;
 }
-.myArrowStyle{
+
+.myArrowStyle {
   position: absolute;
   right: 40rpx;
-  top:108rpx;
+  top: 108rpx;
   width: 12rpx;
   height: 20rpx;
 }
-
 
 .user_down {
   background: #fff;
@@ -178,7 +179,7 @@ page {
 
 .blockInfo, .contectPerson {
   padding: 0 32rpx;
-  height: 116rpx;
+  height: 112rpx;
   width: 92%;
   justify-content: space-between;
   align-items: flex-end;
@@ -193,7 +194,6 @@ page {
 .blockPic {
   width: 32rpx;
   height: 32rpx;
-  /* opacity: 0.3; */
   margin-right: 32rpx;
   margin-top: 40rpx;
 }
@@ -201,7 +201,6 @@ page {
 .blockTitle {
   font-size: 32rpx;
   color: #333;
-  /* line-height: 32rpx; */
 }
 
 .blockContent {
@@ -439,4 +438,34 @@ page {
 .myInfo {
   background: #fff;
   padding: 32rpx;
+}
+
+.shopPic {
+  width: 72rpx;
+  height: 72rpx;
+  margin: 16rpx 48rpx 0 48rpx;
+}
+
+.shopBlock {
+  background: #fff;
+  font-size: 36rpx;
+  color: #333;
+  text-align: left;
+  margin: 32rpx 0;
+  padding: 34rpx 0;
+  /* justify-content: space-between; */
+}
+
+.shopTitle {
+  font-size: 36rpx;
+  color: #333;
+  text-align: left;
+  line-height: 50rpx;
+  margin-bottom: 16rpx;
+}
+
+.shopShow {
+  font-size: 24rpx;
+  color: #666;
+  text-align: left;
 }
