--- a/Weitianshi/pages/message/contactProject/projectList/projectList.wxss
+++ b/Weitianshi/pages/message/contactProject/projectList/projectList.wxss
@@ -69,7 +69,9 @@
   position: relative;
   background: #fafafa;
 }
-
+.t-outsideBox123{
+    position: relative;
+}
 .hoverBack {
   background: #e0e0e0;
 }
