--- a/Weitianshi/pages/message/message/message.wxss
+++ b/Weitianshi/pages/message/message/message.wxss
@@ -15,8 +15,8 @@
   margin-top: 0;
 }
 .messageList {
-  height: 32rpx;
-  padding: 50rpx 42rpx 50rpx 32rpx;
+  height: 106rpx;
+  padding: 34rpx 42rpx 34rpx 32rpx;
   align-items: center;
   position: relative;
 }
@@ -25,7 +25,7 @@
   font-size: 32rpx;
   text-align: left;
   color: #333;
-  line-height: 32rpx;
+  line-height: 98rpx;
   width: 400rpx;
   margin-top: 6rpx;
 }
@@ -40,8 +40,8 @@
 }
 
 .title_icon {
-  width: 32rpx;
-  height: 32rpx;
+  width: 158rpx;
+  height: 106rpx;
   margin-right: 32rpx;
 }
 
@@ -85,6 +85,7 @@
   height: 20rpx;
   display: block;
   padding: 10rpx 8rpx;
+  margin-top: 20rpx;
 }
 
 /*身份认证 */
